--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
     "date-fns": "^2.25.0",
+    "material-ui-dropzone": "^3.5.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
