--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
     "date-fns": "^2.25.0",
+    "dotenv": "^16.0.0",
     "fs": "^0.0.1-security",
+    "js-cookie": "^3.0.1",
     "material-ui-dropzone": "^3.5.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
