--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-simple-maps": "^2.3.0",
-    "survivor-stats-common": "file:../survivor-stats-common",
+    "survivor-stats-common": "mollyjewel/survivor-stats-common#main",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
