--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "survivorstats",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "8.11"
+  },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.4.1",
