--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "8.11"
+    "node": "16.x"
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
@@ -21,17 +21,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
-    "bootstrap": "^5.1.0",
     "date-fns": "^2.25.0",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.1",
     "fs": "^0.0.1-security",
     "js-cookie": "^3.0.1",
-    "material-ui-dropzone": "^3.5.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-simple-maps": "^2.3.0",
     "survivor-stats-common": "mollyjewel/survivor-stats-common#main",
     "web-vitals": "^1.1.2"
